# close_already

./: .woodpecker.yml  CHANGELOG.md  Cargo.toml  Justfile  README.md
.github/workflows/: lint.yml  rust.yml
.woodpecker/: install_cargo_hack.sh
benches/: criterion.rs
benches/data/: SOURCES.md
src/: fs.rs  lib.rs
