[package]
name = "close_already"
description = "Speeds up programs handling lots of files on Windows"
categories = ["filesystem", "concurrency"]
keywords = ["windows", "fs", "file", "files", "handle"]
version = "0.2.1"
edition = "2021"
rust-version = "1.72"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/alpha-tango-kilo/close_already"

[features]
default = ["backend-threadpool"]
backend-async-std = ["dep:async-std"]
backend-rayon = ["dep:rayon"]
backend-smol = ["dep:smol"]
backend-threadpool = ["dep:threadpool"]
backend-tokio = ["dep:tokio"]

[dependencies]
mutually_exclusive_features = "0.0.3"
# Backends
async-std = { version = "1", optional = true }
rayon = { version = "1", optional = true }
smol = { version = "1", optional = true }
tokio = { version = "1", features = ["rt", "fs"], optional = true }
threadpool = { version = "1.7", optional = true }

[dev-dependencies]
tempfile = "3"
# Have to include this so we can get Async{Read,Write}Ext through feature unification
tokio = { version = "1", features = ["io-util"] }

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
